fixing layout problem with privacy policy

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -6,6 +6,7 @@
   padding: 10px 20px;
   position: fixed;
   width: 100vw; 
+  min-width: 100%;
   background-color: var(--background-color);
   backdrop-filter: blur(10px);
   z-index: 100;
